--- a/src/components/CompositeBar/Item/Item.scss
+++ b/src/components/CompositeBar/Item/Item.scss
@@ -10,7 +10,7 @@ $block: '.#{variables.$ns}composite-bar-item';
     --_--item-background-color-hover: var(--gn-ah-hovered-item-background-color);
 
     --_--item-general-icon-color: var(--g-color-text-primary);
-    --_--item-icon-color: var(--g-color-text-misc);
+    --_--item-icon-color: var(--g-color-text-complementary);
     --_--item-text-color: var(--g-color-text-primary);
 
     // selected item
