fix(CollapseButton): fix scss

--- a/src/components/AsideHeader/components/CollapseButton/CollapseButton.scss
+++ b/src/components/AsideHeader/components/CollapseButton/CollapseButton.scss
@@ -1,5 +1,5 @@
 @use '../../../variables';
-@use '@gravity-ui/uikit/styles/mixins';
+@use '~@gravity-ui/uikit/styles/mixins';
 
 $block: '.#{variables.$ns}collapse-button';
 
