fix: update screenshots

--- a/playwright/playwright/index.scss
+++ b/playwright/playwright/index.scss
@@ -1,2 +1,3 @@
 @import '@gravity-ui/uikit/styles/styles.scss';
 @import '@gravity-ui/uikit/styles/fonts.scss';
+@import '../../styles/mixins.scss';
