--- a/src/components/CompositeBar/Item/Item.scss
+++ b/src/components/CompositeBar/Item/Item.scss
@@ -92,12 +92,19 @@ $block: '.#{variables.$ns}composite-bar-item';
     }
 
     &__collapse-item {
+        --_--item-icon-color: var(--g-color-text-misc);
+
         display: flex;
         padding: 0 16px;
         align-items: center;
         width: 100%;
         height: 100%;
         cursor: pointer;
+
+        &-icon {
+            color: var(--gn-aside-header-item-icon-color, var(--_--item-icon-color));
+            margin-right: 10px;
+        }
 
         #{$class}__title-adornment {
             margin-right: 0;
