fix: asideheader test

--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -1,4 +1,5 @@
 @import '~@gravity-ui/uikit/styles/mixins';
+@import '~@gravity-ui/uikit/styles/fonts';
 
 @mixin aside-header-button() {
     &_current::before {
