fix: update version playwright

--- a/playwright/playwright/index.scss
+++ b/playwright/playwright/index.scss
@@ -1,3 +1,4 @@
 @import '@gravity-ui/uikit/styles/styles.scss';
 @import '@gravity-ui/uikit/styles/fonts.scss';
+@import '@gravity-ui/uikit/styles/mixins.scss';
 @import '../../styles/mixins.scss';
