fix: font tag pre

--- a/playwright/playwright/index.scss
+++ b/playwright/playwright/index.scss
@@ -2,3 +2,7 @@
 @import '@gravity-ui/uikit/styles/fonts.scss';
 @import '../../.storybook/styles.scss';
 @import '../../styles/mixins.scss';
+
+pre {
+    font-family: 'Inter', sans-serif;
+}
