chore: brake tests

--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -11,7 +11,7 @@ $block: '.#{variables.$ns}aside-header';
     --gn-aside-header-min-width: 56px;
 
     --_--item-icon-background-size: 38px;
-    --_--background-color: var(--g-color-base-background);
+    --_--background-color: pink;
     --_--decoration-collapsed-background-color: var(--g-color-base-warning-light);
     --_--decoration-expanded-background-color: var(--g-color-base-warning-light);
     --_--vertical-divider-line-color: var(--g-color-line-generic);
