feat(Drawer): add veil color to CSS API, shadow for DrawerItem (#290)
* feat(Drawer): add veil color to CSS API, shadow for DrawerItem

--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -5,11 +5,19 @@ $block: '.#{variables.$ns}drawer';
 #{$block} {
     pointer-events: none;
 
+    --_--item-shadow-default: 0 1px 5px 0 var(--g-color-sfx-shadow);
+
     --_--resizer-width: 8px;
     --_--resizer-color: var(--g-color-base-generic);
     --_--resizer-handle-color: var(--g-color-line-generic);
     --_--resizer-handle-color-hover: var(--g-color-line-generic-hover);
     --_--resizer-z-index: 100;
+
+    --_--veil-background-color: var(--g-color-sfx-veil);
+
+    &_hideVeil {
+        --_--item-shadow: var(--gn-drawer-item-shadow, var(--_--item-shadow-default));
+    }
 
     &__item {
         position: absolute;
@@ -20,6 +28,7 @@ $block: '.#{variables.$ns}drawer';
         will-change: transform;
         background-color: var(--g-color-base-background);
         pointer-events: initial;
+        box-shadow: var(--_--item-shadow, none);
 
         &_direction_right {
             left: auto;
@@ -75,7 +84,7 @@ $block: '.#{variables.$ns}drawer';
         position: absolute;
         pointer-events: initial;
         inset: 0;
-        background-color: var(--g-color-sfx-veil);
+        background-color: var(--gn-drawer-veil-background-color, var(--_--veil-background-color));
 
         &_hidden {
             display: none;
