--- a/src/components/AllPagesPanel/AllPagesListItem/AllPagesListItem.scss
+++ b/src/components/AllPagesPanel/AllPagesListItem/AllPagesListItem.scss
@@ -1,6 +1,9 @@
 @use '../../variables';
+@use '../../../../styles/mixins';
 
 .#{variables.$ns}all-pages-list-item {
+    @include mixins.accessibility-button;
+
     display: flex;
     align-items: center;
 
@@ -11,6 +14,7 @@
 
     &__text {
         flex: 1;
+        text-align: initial;
     }
 
     &__icon {
