--- a/src/components/Footer/mobile/Footer.scss
+++ b/src/components/Footer/mobile/Footer.scss
@@ -36,6 +36,7 @@ $block: '.#{variables.$ns}footer';
 
         &__menu-item {
             padding: var(--g-spacing-2) var(--g-spacing-3);
+            box-sizing: border-box;
         }
 
         &__bottom-row {
