--- a/src/components/Drawer/Drawer.scss
+++ b/src/components/Drawer/Drawer.scss
@@ -77,7 +77,8 @@ $block: '.#{variables.$ns}drawer';
     }
 
     &__item-transition-exit-done,
-    &__item-transition_direction_right-exit-done {
+    &__item-transition_direction_right-exit-done,
+    &__item_hidden {
         visibility: hidden;
     }
 
