--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -222,32 +222,22 @@ $block: '.#{variables.$ns}aside-header';
         flex-direction: row;
     }
 
-    &__pane-top-divider {
-        height: 1px;
-        background-color: var(
-            --gn-aside-header-divider-horizontal-color,
-            var(--_--horizontal-divider-line-color)
-        );
-        margin-top: -1px;
-    }
-
-    &__pane-top {
+    &__top-alert {
         position: fixed;
         z-index: var(--gn-aside-header-pane-top-z-index, 98);
         top: 0;
         background: var(--g-color-base-background);
         width: 100%;
-    }
 
-    &__pane-top-alert {
-        &_centered {
-            display: flex;
-            justify-content: space-around;
-        }
-
-        &_dense {
-            padding-top: var(--g-spacing-2);
-            padding-bottom: var(--g-spacing-2);
+        &::after {
+            display: block;
+            content: '';
+            height: 1px;
+            background-color: var(
+                --gn-aside-header-divider-horizontal-color,
+                var(--_--horizontal-divider-line-color)
+            );
+            margin-top: -1px;
         }
     }
 
