feat(AsideHeader): add items sorting

--- a/src/components/AllPagesPanel/AllPagesPanel.scss
+++ b/src/components/AllPagesPanel/AllPagesPanel.scss
@@ -20,4 +20,8 @@
     &__discoverable-feature-wrapper {
         display: flex;
     }
+
+    &__item_editMode {
+        padding: 0 var(--g-spacing-6);
+    }
 }
