--- a/src/components/AllPagesPanel/AllPagesListItem/AllPagesListItem.scss
+++ b/src/components/AllPagesPanel/AllPagesListItem/AllPagesListItem.scss
@@ -16,4 +16,8 @@
     &__icon {
         color: var(--g-color-text-misc);
     }
+
+    &_edit-mode {
+        padding: 0 0 0 var(--g-spacing-4);
+    }
 }
