--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -2,10 +2,6 @@
 
 $block: '.#{variables.$ns}aside-header';
 
-.g-root {
-    --gn-aside-top-panel-height: 0px;
-}
-
 #{$block} {
     $class: &;
     --gn-aside-header-min-width: 56px;
@@ -24,7 +20,7 @@ $block: '.#{variables.$ns}aside-header';
 
     &__aside {
         position: sticky;
-        top: var(--gn-aside-top-panel-height);
+        top: var(--gn-top-alert-height, 0);
         left: 0;
         height: 100vh;
         width: inherit;
@@ -35,8 +31,8 @@ $block: '.#{variables.$ns}aside-header';
             var(--gn-aside-header-background-color, var(--_--background-color))
         );
         z-index: var(--gn-aside-header-z-index, 100);
-        max-height: calc(100vh - var(--gn-aside-top-panel-height));
-        margin-top: var(--gn-aside-top-panel-height);
+        max-height: calc(100vh - var(--gn-top-alert-height, 0));
+        margin-top: var(--gn-top-alert-height, 0);
 
         box-sizing: border-box;
 
@@ -205,9 +201,9 @@ $block: '.#{variables.$ns}aside-header';
     &__panels {
         z-index: var(--gn-aside-header-panel-z-index, 98);
         position: fixed;
-        inset: var(--gn-aside-top-panel-height) 0 0;
+        inset: var(--gn-top-alert-height, 0) 0 0;
         overflow: auto;
-        max-height: calc(100vh - var(--gn-aside-top-panel-height));
+        max-height: calc(100vh - var(--gn-top-alert-height, 0));
     }
 
     &__panel {
@@ -222,16 +218,7 @@ $block: '.#{variables.$ns}aside-header';
         flex-direction: row;
     }
 
-    &__pane-top-divider {
-        height: 1px;
-        background-color: var(
-            --gn-aside-header-divider-horizontal-color,
-            var(--_--horizontal-divider-line-color)
-        );
-        margin-top: -1px;
-    }
-
-    &__pane-top {
+    &__top-alert {
         position: fixed;
         z-index: var(--gn-aside-header-pane-top-z-index, 98);
         top: 0;
@@ -239,21 +226,9 @@ $block: '.#{variables.$ns}aside-header';
         width: 100%;
     }
 
-    &__pane-top-alert {
-        &_centered {
-            display: flex;
-            justify-content: space-around;
-        }
-
-        &_dense {
-            padding-top: var(--g-spacing-2);
-            padding-bottom: var(--g-spacing-2);
-        }
-    }
-
     &__content {
         width: calc(100% - var(--gn-aside-header-size));
         z-index: var(--gn-aside-header-content-z-index, 95);
-        margin-top: var(--gn-aside-top-panel-height);
+        margin-top: var(--gn-top-alert-height, 0);
     }
 }
