--- a/src/components/CompositeBar/Item/Item.scss
+++ b/src/components/CompositeBar/Item/Item.scss
@@ -20,6 +20,7 @@ $block: '.#{variables.$ns}composite-bar-item';
     --_--item-selected-background-color-active: var(--g-color-base-selection);
 
     display: flex;
+    min-width: 0;
     width: 100%;
     height: 100%;
     align-items: center;
