--- a/src/components/CompositeBar/Item/Item.scss
+++ b/src/components/CompositeBar/Item/Item.scss
@@ -3,12 +3,6 @@
 
 $block: '.#{variables.$ns}composite-bar-item';
 
-// rewrite default button styles
-
-.g-list__item-content .g-button.g-button_pin_round-round.g-button {
-    border-radius: var(--gn-composite-bar-item-action-size);
-}
-
 #{$block} {
     @include mixins.accessibility-button;
 
@@ -35,6 +29,19 @@ $block: '.#{variables.$ns}composite-bar-item';
     align-items: center;
     cursor: pointer;
     padding: 0;
+
+    &__action {
+        display: flex;
+        min-width: 0;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    &__action_collapse {
+        width: 216px;
+    }
 
     &__icon {
         color: var(--gn-aside-header-item-icon-color, var(--_--item-icon-color));
@@ -169,51 +176,15 @@ $block: '.#{variables.$ns}composite-bar-item';
         justify-content: center;
     }
 
-    &_type_action {
-        justify-content: center;
-        height: var(--gn-composite-bar-item-action-size);
+    &__action-container {
+        width: 100%;
         margin: 0 10px 8px;
-        background: var(--g-color-base-float);
-        box-shadow:
-            0px 0px 0px 1px rgba(0, 0, 0, 0.03),
-            0px 5px 6px rgba(0, 0, 0, 0.12);
+    }
 
-        transition:
-            transform 0.1s ease-out,
-            background-color 0.15s linear;
-
-        &:focus-visible {
-            box-shadow: 0 0 0 2px var(--g-color-line-misc);
-        }
-
-        &:hover {
-            background-color: var(--g-color-base-float-hover);
-        }
-
-        &:active {
-            box-shadow: 0 1px 2px var(--g-color-sfx-shadow);
-            transition: none;
-            transform: scale(0.96);
-        }
-
-        & #{$class}__icon-place {
-            width: var(--gn-composite-bar-item-action-size);
-        }
-<<<<<<< HEAD
-=======
-
-        & #{$class}__title {
-            margin-right: 16px;
-        }
-
-        &::before {
-            content: none;
-        }
-
-        &::after {
-            content: none;
-        }
->>>>>>> a59feff (feat(AsideHeader): add ui-kit button in aside-header)
+    &__action-container-compact {
+        width: var(--gn-composite-bar-item-action-size, 36px);
+        height: var(--gn-composite-bar-item-action-size, 36px);
+        margin: 0 10px 8px;
     }
 
     &__icon-tooltip_item-type_action {
