--- a/src/components/AllPagesPanel/AllPagesPanel.scss
+++ b/src/components/AllPagesPanel/AllPagesPanel.scss
@@ -20,4 +20,15 @@
     &__discoverable-feature-wrapper {
         display: flex;
     }
+
+    &__item_editMode {
+        padding: 0 var(--g-spacing-6);
+    }
+
+    &__drag-placeholder {
+        padding-left: 88px;
+        padding-right: 68px;
+        text-wrap: nowrap;
+        visibility: hidden;
+    }
 }
