--- a/src/components/Drawer/__stories__/DrawerShowcase.scss
+++ b/src/components/Drawer/__stories__/DrawerShowcase.scss
@@ -1,4 +1,6 @@
 .drawer-showcase {
+    --gn-drawer-item-position: absolute;
+
     display: flex;
     flex-direction: column;
     position: relative;
