--- a/src/components/HotkeysPanel/__stories__/HotkeysPanelShowcase.scss
+++ b/src/components/HotkeysPanel/__stories__/HotkeysPanelShowcase.scss
@@ -1,6 +1,8 @@
 @import '../../../../styles/mixins';
 
 .hotkeys-panel-showcase {
+    --gn-drawer-item-position: absolute;
+
     display: flex;
     flex-direction: column;
     position: relative;
