--- a/src/components/MobileHeader/OverlapPanel/__stories__/OverlapPanel.scss
+++ b/src/components/MobileHeader/OverlapPanel/__stories__/OverlapPanel.scss
@@ -1,4 +1,6 @@
 .overlap-panel-showcase {
+    --gn-drawer-item-position: absolute;
+
     display: flex;
     flex-direction: column;
     position: relative;
