feat(Settings)!: remove showTitle, onlyChild prop

--- a/src/components/Settings/Settings.scss
+++ b/src/components/Settings/Settings.scss
@@ -170,11 +170,11 @@ $block: '.#{variables.$ns}settings';
             margin-top: 32px;
         }
 
-        &_only-child:only-child &-item:first-of-type {
+        &:only-child &-item:first-of-type {
             margin-top: 0px;
         }
 
-        &_only-child:only-child &-heading {
+        &:only-child &-heading {
             display: none;
         }
     }
