--- a/src/components/AsideHeader/AsideHeader.scss
+++ b/src/components/AsideHeader/AsideHeader.scss
@@ -6,7 +6,7 @@ $block: '.#{variables.$ns}aside-header';
 
 .g-root {
     --gn-aside-top-panel-height: 0px;
-
+    overflow-x: hidden;
     &_theme_light {
         @include gn-theme-light();
     }
@@ -247,6 +247,7 @@ $block: '.#{variables.$ns}aside-header';
     }
 
     &__content {
+        overflow-x: auto;
         width: calc(100% - var(--gn-aside-header-size));
         z-index: var(--gn-aside-header-content-z-index, 95);
         margin-top: var(--gn-top-alert-height, 0);
