--- a/src/components/MobileHeader/MobileHeader.scss
+++ b/src/components/MobileHeader/MobileHeader.scss
@@ -29,6 +29,10 @@ $block: '.#{variables.$ns}mobile-header';
         padding: 12px;
     }
 
+    &__panel-item {
+        --gn-drawer-item-position: var(--gn-mobile-header-panel-position, absolute);
+    }
+
     &__burger-menu,
     &__panel-item {
         background-color: var(--g-color-base-background);
